--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -16,12 +16,16 @@
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~9.1.13",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^11.0.3",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "chart.js": "^2.9.4",
+    "firebase": "^8.2.1",
+    "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
