--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
+    "ngx-order-pipe": "^2.1.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
