--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "firebase": "^8.2.1",
+    "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
