--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -33,6 +33,7 @@
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "ngx-toastr": "^10.0.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
