--- a/sprint2-frontend/angular.json
+++ b/sprint2-frontend/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -89,6 +90,7 @@
             ],
             "styles": [
               "src/styles.css"
+
             ],
             "scripts": []
           }
