--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "sprint2-frontend",
   "version": "0.0.0",
   "scripts": {
@@ -31,10 +31,10 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-order-pipe": "^2.1.1",
     "ngx-pagination": "^5.0.0",
+    "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "ngx-toastr": "^12.1.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.13",
