--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "firebase": "^8.2.1",
