--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -26,15 +26,19 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "firebase": "^8.2.1",
+    "highcharts": "^8.2.2",
+    "highcharts-angular": "^2.9.0",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
+    "jspdf": "^2.2.0",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-order-pipe": "^2.1.1",
     "ngx-pagination": "^5.0.0",
+    "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "ngx-toastr": "^12.1.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.13",
