--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -12,6 +12,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.13",
+    "@angular/material-moment-adapter": "^10.2.7",
+    "moment": "^2.29.1",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
