--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.13",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
@@ -32,6 +32,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-order-pipe": "^2.1.1",
     "ngx-pagination": "^5.0.0",
+    "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
