--- a/sprint2-frontend/package.json
+++ b/sprint2-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/moment-adapter": "^2.0.2",
     "@angular/animations": "^9.1.13",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.1.13",
